# xyz-abc

./: .gitignore  README.md  SPEC.md  chat.db  package.json  revised-architecture.md  vercel.json
agent-backend/: .env.example  benchmark_results.csv  chat.db  custom_algo_template.py  debug_intake.py  debug_output.txt  explanation.md  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  reproduce_error.py  requirements.txt  server.py
agent-backend/benchwarmer/: __init__.py  config.py  database.py
agent-backend/benchwarmer/agents/: __init__.py  backends.py  implementation.py  intake.py  orchestrator.py  plot.py  tools.py
agent-backend/benchwarmer/algorithms/: __init__.py  base.py
agent-backend/benchwarmer/engine/: __init__.py  modal_runner.py  runner.py  sandbox_pool.py
agent-backend/benchwarmer/generators/: __init__.py  barabasi_albert.py  base.py  erdos_renyi.py  grid_2d.py  planar_random.py  planted_partition.py
agent-backend/benchwarmer/problem_classes/: __init__.py  maximum_cut.py  minimum_vertex_cover.py  registry.py
agent-backend/benchwarmer/utils/: algorithm_sandbox.py  benchmark_suites.py  instance_loader.py  loader.py  modal_sandbox.py  sandbox.py
agent-backend/scripts/: demo_phase1.py  run_benchmark.py
agent-backend/tests/: test_agents.py  test_algorithm_sandbox.py  test_backends.py  test_benchmark_suites.py  test_engine.py  test_generators.py  test_instance_loader.py  test_modal_runner.py  test_pdf_native.py  test_problem_classes.py  test_sandbox.py
frontend-vite/: index.html  package-lock.json  package.json  tailwind.config.js  (+2 more)
(+26 files in other folders)
