[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchwarmer"
version = "0.1.0"
description = "Algorithm benchmarking platform with NL-driven intake and interactive analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
agents = ["anthropic>=0.30"]

[tool.setuptools.packages.find]
include = ["benchwarmer*"]
